--- a/Dissertation/part_theory.tex
+++ b/Dissertation/part_theory.tex
@@ -4,7 +4,11 @@
 \label{chapter_theory}
 
 \section{Основные определения}
-В этом разделе представлены основные определения параллельной программы и достижимых конкретных состояний.
+
+В данной главе описывается метод верификации многопоточной программы с раздельным рассмотрением потоков.
+Описание метода опирается понятия, используемые в статической верификации. 
+Основными из них являются понятия \textit{состояние программы}, \textit{достижимости} и \textit{абстракции}.
+Описанию этих и других необходимых понятий посвящена данная секция.
 
 Будем рассматривать простой императивный язык программирования, в котором поддерживаются операторы присваивания (assignment), проверки условия (assumption), захват и освобождение примитивов синхронизации (acquire/release) и создание потоков (thread\_create)\footnote{Реализация основана на инструменте \cpachecker, который работает с программами на языке Си}.
 
@@ -23,13 +27,13 @@
 
 \emph{Конкретным состоянием} параллельной программы называется четверка $(c_{pc}, c_l, c_g, c_s)$, где
 \begin{enumerate}
-\item Отображение $c_{pc}: T \to L$ является частичной функцией из идентификаторов потока во множество точек программы.
+\item Отображение $c_{pc}: T \to L$ является частичной функцией из идентификаторов потоков во множество точек программы.
 Каждое такое состояние задает точку в программе, в которой находится каждый из потоков.
-\item Отображение $c_l: T \to C^{local}$ является частичной функций из множества идентификаторов потока во множество присваиваний локальным переменным их значений. $C^{local}: X^{local} \to \mathbb{Z}$ - отображение, которое задает каждой переменной из $X^{local}$ ее значение из $\mathbb{Z}$.
+\item Отображение $c_l: T \to C^{local}$ является частичной функций из множества идентификаторов потоков во множество присваиваний локальным переменным их значений. $C^{local}: X^{local} \to \mathbb{Z}$ -- отображение, которое задает каждой переменной из $X^{local}$ ее значение из $\mathbb{Z}$.
 \item $c_g: X^{global} \to \mathbb{Z}$ задает значения глобальных переменных программы.
 \item $c_s: S \to \mathcal{T}$ задает значения блокировок. 
 \end{enumerate}
-Множество всех возможных конкретных состояния программы обозначим через $C$.
+Множество всех возможных конкретных состояний программы обозначим через $C$.
 
 Отображения $c_{pc}$ и $c_l$ представляют локальные части конкретного состояния для каждого потока, а $c_g$ и $c_s$ представляют глобальную часть конкретного состояния, не зависящую от потока.
 Обозначим $dom$ область определения частичной функции, например, $dom(c_{pc})=\{ t \mid \exists (t, l) \in c_{pc} \land t \in T \land l \in L \}$.
@@ -39,8 +43,10 @@
 Каждое состояние $c=(c_{pc}, c_l, c_g, c_s)\in C$ должно удовлетворять условию $dom(c_{pc})=dom(c_l)$, которое означает, что области определения локальных частей состояния находятся в консистентном состоянии.
 Будем использовать обозначение $dom(c)$, как область значения локальных частей состояния, то есть $dom(c)=dom(c_{pc})=dom(c_l)$.
 
-Под отношением переходов, помеченным дугой $g$ будем понимать $\tc{g,t} \subseteq C \times G \times T \times C$, где дуга $g \in G$, а идентификатор потока $t \in T$.
-Переход  $c_1 \tc{g,t} c_2, (c_1, c_2 \in C$) моделирует переход программы из состояния $c_1$ в состояние $c_2$ при выполнении потоком $t \in T$ операции на дуге $g \in G$.
+Отношение переходов $TR$ определяет преобразование конкретных операторов под действием операторов. 
+$TR \subseteq C \times G \times T \times C$.
+Переход  $(c_1, g, t, c_2), (c_1, c_2 \in C)$ моделирует переход программы из состояния $c_1$ в состояние $c_2$ при выполнении потоком $t \in T$ операции на дуге $g \in G$.
+Для наглядности будем использовать обозначение $c_1 \tc{g, t} c_2$ вместо $(c_1, g, t, c_2) \in TR$.
 Для полноты будем считать, что существует специальный $\varepsilon$-переход из каждого состояния в себя:
 $\forall c \in C, t \in T: c \tc{\varepsilon, t} c$.
 
@@ -68,42 +74,56 @@ $c \tcarrow c'$, если $\exists g\in G: c \tc{g} c'$.
 %define regular semantics
 Обозначим через $eval(c, t, expr)$ значение выражения $expr$ над переменными из $X^{local} \cup X^{global}$ и со значениями этих переменных из конкретного состояния $c \in C$ для потока с идентификатором $t \in T$. %TODO need more?
 
-Далее определим семантику операций в программе.
+Далее определим семантику операций в программе: оператора присваивания (assignment), оператора проверки условия (assumption), операторов захвата и освобождения блокировки (acquire/release), а также оператора порождения потока (thread\_create).
+Для каждого из этих операторов необходимо задать правила преобразования конкретных состояний программы.
+Далее мы не будем отдельно подчеркивать требования 1--3, которые выполняются для любого перехода.
 
-\subsection{Проверка условия}
-Для дуги $g = (l, assume(expr), l') \in G$, $t\in T$, $l, l' \in L$ существует переход $c \tc{g, t} c'$, $c=(c_{pc}, c_l, c_g, c_s)$, $c'=(c'_{pc}, c'_l, c'_g, c'_s) \in C$ в том и только в том случае, если
+\subsection{Оператор проверки условия}
+
+Рассмотрим дугу CFA, которая содержит оператор проверки условия $g = (l, assume(expr), l') \in G$, $l, l' \in L$.
+Переход $c \tc{g, t} c'$, $c, c' \in C, t\in T$ существует в том и только в том случае, если
 \begin{itemize}
-\item $dom(c)=dom(c')$ -- переход не меняет множество активных потоков;
+\item $c = c'$ -- переход не меняет состояние программы;
 \item $eval(c, t, expr) \neq 0$ -- значение проверяемого выражение не равно нулю.
 \end{itemize}
 
-\subsection{Присваивание}
-Для дуги $g = (l, assign(x, expr), l') \in G$, $t\in T$, $l, l' \in L$ существует переход $c \tc{g, t} c'$, $c=(c_{pc}, c_l, c_g, c_s)$, $c'=(c'_{pc}, c'_l, c'_g, c'_s) \in C$ в том и только в том случае, если
+\subsection{Оператор присваивания}
+
+Рассмотрим дугу CFA, которая содержит оператор проверки условия $g = (l, assign(x, expr), l') \in G$, $l, l' \in L$.
+Переход $c \tc{g, t} c'$, $c, c' \in C, t\in T$, $c=(c_{pc}, c_l, c_g, c_s)$ существует в том и только в том случае, если
 \begin{itemize}
 \item $dom(c)=dom(c')$ -- переход не меняет множество активных потоков;
 \item 
+Переход присваивает переменной $x$ значение выражения $expr$, то есть
+\begin{itemize}
+\item Если $x \in X^{local}$
+\begin{align*}
+\forall x' \in X^{local}: c'_l(t')(x')=
+\begin{cases}
+eval(c, t, expr)& \text{, если $x' = x \land t' = t$} \\
+c_l(t')(x') & \text{, если $x'\neq x \lor t \neq t'$}
+\end{cases} 
+\end{align*}
+$c'_g = c_g$.
+
+\item Если $x \in X^{global}$ 
 \begin{align}
-c'_l(t)(x')=
+\forall x' \in X^{global}: c'_g(x')=
 \begin{cases}
 eval(c, t, expr)& \text{, если $x' = x$} \\
-c_l(t)(x') & \text{, если $x' \in X^{local} \land x'\neq x$}
+c_g(x') & \text{, если $x'\neq x$}
 \end{cases} \nonumber
 \end{align}
-\item
-\begin{align}
-c'_g(x')=
-\begin{cases}
-eval(c, t, expr)& \text{, если $x' = x$} \\
-c_g(x') & \text{, если $x' \in X^{global} \land x'\neq x$}
-\end{cases} \nonumber
-\end{align}
+$c'_l = c_l$.
+\end{itemize}
+
 \item $c'_s = c_s$ -- блокировки не меняют свои значения.
 \end{itemize}
 
-%define acquire|release operations
 \subsection{Операции с примитивами синхронизации}
-Используем похожее определение на то, которое было дано в~\cite{TAR}. 
-Предполагаем, что операция $acquire(s)$ в потоке $t \in T$, где $s\in S$ - блокировка, имеет следующую семантику: 
+
+%Используем похожее определение на то, которое было дано в~\cite{TAR}. 
+Предполагаем, что операция $acquire(s)$ в потоке $t \in T$, где $s\in S$ -- блокировка, имеет следующую семантику: 
 если $s \mapsto \bot_T$ в предыдущем состоянии, тогда $s \mapsto t$ в следующем состоянии, и эта операция (сравнение и изменение состояния блокировки) производится атомарно за один переход.
 %This encoding is essential to prove absence of data races by thread-modular analysis as described in~\cite{}. %qader
 %For example, if you use semantics $if$ $(s==0)$ $s=1$ then thread-modular approach will not work.
@@ -156,10 +176,15 @@ $c \tc{g, t} c'$, $c=(c_{pc}, c_l, c_g, c_s)$, $c'=(c'_{pc}, c'_l, c'_g, c'_s) \
 
 \subsection{Ошибка в программе}
 
-Во многих методах статической верификации используется понятие ошибочного состояния. 
-Такие методы решают задачу достижимости и пытаются доказать, что заданное ошибочное состояния недостижимо.
-Примером такого определения является использование конструкций типа assert. 
-В случае нарушения логического условия, записанного в качестве параметра, инструмент фиксирует ошибку.
+%Во многих методах статической верификации используется понятие ошибочного состояния. 
+%Такие методы решают задачу достижимости и пытаются доказать, что заданное ошибочное состояния недостижимо.
+%Примером такого определения является использование конструкций типа assert. 
+%В случае нарушения логического условия, записанного в качестве параметра, инструмент фиксирует ошибку.
+
+Существует несколько различных вариантов определения корректности программы, в частности, определения, что является ошибкой.
+Наиболее общим вариантом является использования понятия достижимости.
+В этом случае при верификации программа считается корректной, если удается доказать, что все ошибочные состояния недостижимы.
+Если ошибочное состояние представить как точку в программе, где стоит, например, оператор assert, то корректной можно назвать программу, в которой все логические условия, записанные в качестве параметра оператора assert, не нарушаются.
 
 Такое определение ошибки является достаточно общим, так как позволяет сформулировать различные свойства программы, которые требуется верифицировать. 
 Еще одной важной особенностью является то, что такое определение с одинаковым успехом может применяться как к последовательным программам, так и к параллельным. 
@@ -173,8 +198,14 @@ assert(variable == expression);
 \end{lstlisting}
 \end{small}
 
-Основным минусом такого подхода является то, что при поиске состояний гонки  реальных программах не известно, какая именно переменная может модифицироваться из нескольких потоков, а значит, придется расставлять assert после каждой записи в переменную. 
-Поэтому, хотя такое определение ошибки тоже имеет место и поддерживается в предлагаемой теории, дадим более практичное определение.
+Эта конструкция моделирует проверку, не может ли измениться значение переменной $variable$ в данной точке программы.
+Если инструменту удается доказать, что условие оператора assert не нарушается, это будет означать, что не существует потока, который мог бы обновить значение переменной.
+И наоборот, если условие нарушается, это означает, что значение переменной было изменено в параллельном потоке.
+
+Основным минусом такого подхода является то, что при поиске состояний гонки в реальных программах не известно, какая именно переменная может модифицироваться из нескольких потоков, а значит, придется расставлять assert после каждой записи в переменную, проверяя, может ли измениться ее значение в другом потоке или нет.
+Кроме того, такой подход не позволяет обнаруживать состояния гонки, в котором один из доступов является чтением.
+Тем не менее, многие инструменты статической верификации используют его, как наиболее простой.
+Данная теория также поддерживает такое определение, однако, для практического поиска состояний гонки нам потребуется более практичное определение.
 
 \begin{defn}
 \label{raceDef}
@@ -192,21 +223,25 @@ assert(variable == expression);
 \newcommand{\update}{update}
 \newcommand{\frontier}{frontier}
 
-В классической теории~\cite{BeyerCPA07,Beyer08}, абстрактное состояние представляет собой множество конкретных состояний программы.
-В предлагаемом расширении теории абстрактное состояние является частичным, то есть оно может не представлять ни одного состояния программы.
-Поэтому функция конкретизации, которая предоставляет соответствие между абстрактными состояниями и конкретными, в расширенной теории отличается от классической: она определяется на множестве абстрактных элементов.
+В классической теории~\cite{BeyerCPA07,Beyer08}, абстрактное состояние описывает некоторую совокупность конкретных состояний программы.
+Рассматривая абстрактные состояния программы вместо конкретных, инструмент сокращает пространство поиска, что позволяет повысить эффективность анализа.
+В предлагаемом расширении теории абстрактное состояние является частичным, то есть оно может содержать лишь часть информации о конкретных состояниях программы.
+Для того, чтобы получить соответствующие ему конкретные состояния необходимо взять другие частичные абстрактные состояния.
 Это является следствием того, что полное конкретное состояние может быть получено только из нескольких частичных состояний, описывающих потоки по-отдельности.
+Таким образом, функция конкретизации, которая предоставляет соответствие между абстрактными состояниями и конкретными, в расширенной теории отличается от классической: она определяется на множестве абстрактных элементов.
 
 Частичными также являются и абстрактные переходы.
-Поэтому анализ не может гарантировать, что последующие конкретные переходы будут достижимы за один шаг оператора transfer.
-В общем случае для этого может понадобиться $k$ шагов. Для подхода с отдельным анализом потоков $k=2$: анализ выполняет обычный переход в потоке, а затем распространяет его на все остальные потоки в качестве перехода в окружении. Это требует двух итераций алгоритма.
+Каждый абстрактный переход теперь содержит лишь ту часть информации о конкретном переходе, которая соответствует частичному абстрактному состоянию. 
+Чтобы получить информацию о полном абстрактном переходе, необходимо взять несколько частичных переходов, в общем случае некоторое количество $k$.
+Поэтому анализ не может гарантировать, что последующие конкретные переходы будут достижимы за один шаг оператора transfer, так как необходимо получить $k$ отдельных частичных переходов.
+Для подхода с отдельным анализом потоков $k=2$: анализ выполняет обычный переход в потоке, а затем распространяет его на все остальные потоки в качестве перехода в окружении за один шаг. Это требует двух итераций алгоритма.
 
 Определим формально \emph{адаптивный статический анализ с абстрактными переходами} для параллельных программ $\mathbb{D}=(D$, $\Pi$, $\tatarrow$, $merge$, $stop$, $prec$).
 Он состоит из абстрактного домена $D$, 
 множество точности $\Pi$, 
 отношения переходов $\tatarrow$,
-оператора слияния $merge$, оператор останова $stop$, функции уточненения $prec$.
-Несмотря на то, что сам операторы остались теми же, что и в классической версии теории, они претерпели некоторые изменения.
+оператора слияния $merge$, оператора останова $stop$, функции уточненения $prec$.
+Несмотря на то, что сами операторы остались теми же, что и в классической версии теории, они претерпели некоторые изменения.
 Эти операторы будут подробно рассмотрены далее.
 
 \begin{itemize}
@@ -349,10 +384,12 @@ $Suc(R) = \bigcup_{e \in R}{Suc(e, R)}$.
 Алгоритм~\ref{cpata_algorithm_ps} представляет основной алгоритм, который вычисляет множество достижимых абстрактных переходов.
 Он также не претерпел никаких изменений относительно классической теории CPA за исключением расширения оператора transfer.
  
+Описание алгоритма состоит из входных данных $Data$, описания результата $result$ и, собственно, алгоритма.
+
 \begin{algorithm}
 % Plain Algorithm
  \KwData{
- адаптивный статический анализ с частичными состояниями $\mathbb{D}$,
+ адаптивный статический анализ $\mathbb{D}=(D$, $\Pi$, $\tatarrow$, $merge$, $stop$, $prec$),
  {начальный абстрактный переход $e_0$ с точностью $\pi_0 \in \Pi$},
  {множество $reached$ элементов из $E \times \Pi$},
  {множество $waitlist$ элементов из $2^{E \times \Pi}$}
@@ -393,6 +430,26 @@ $$\conc{CPA_{PS}(\mathbb{D}, e_0, \pi_0)} \supseteq Reach_{\tcarrow}(\conc{\{e_0
 \end{thrm}
 
 Доказательство теоремы~\ref{thrm_soundness} приведено в Приложении~\ref{sect_thrm_soundness_proof}.
+
+\section{Использование нескольких CPA одновременно}
+
+Алгоритм построения множества достижимых состояний оперирует адаптивным статическим анализом $\mathbb{D}$, который определяет необходимый набор операторов.
+Свойства операторов определяют свойства получившегося анализатора: будет ли он ближе к классическим методам проверки моделей или, наоборот, к быстрым методам анализа потока данных.
+Таким образом, настраивая вид операторов, можно получать различные варианты алгоритма анализа.
+
+Другим вариантом настройки является комбинация различных CPA друг с другом.
+Например, один CPA может быть вложен в другой.
+Это означает, что при использовании операторов верхнего CPA, применяются операторы и внутреннего.
+При этом внутренний CPA должен гарантировать выполнение требований на свои операторы с учетом возможного влияния внутреннего CPA.
+Такой способ позволяет использовать несколько различных CPA за один запуск алгоритма, что, по сути, означает композицию различных вариантов анализа.
+
+Подход с раздельным рассмотрением потоков будет реализовывать как раз такую схему.
+Соответствующий CPA (будем называть его ThreadModularCPA), который реализует всю функциональность предложенного подхода, будет внешним CPA для алгоритма построения множества достижимых состояний (алгоритм~\ref{cpata_algorithm_ps}), то есть, его операторы будут использоваться алгоритмом.
+В ThreadModularCPA могут быть вложены другие CPA, на которые накладываются дополнительные требования.
+Далее будет рассмотрен пример вложенного CPA -- CompositeCPA, который реализует возможность параллельной композиции различных CPA. 
+В CompositeCPA может быть вложено несколько различных CPA, которые работают независимо и параллельно, то есть, соответствующие операторы вызываются независимо друг от друга.
+
+Далее будет представлено описание ThreadModularCPA, CompositeCPA и примеры CPA, которые реализуют различные варианты анализа: анализ предикатов (PredicateCPA), анализ примитивов синхронизации (LockCPA), анализ потоков (ThreadCPA) и др.
 
 \newcommand{\IR}{IR}
 \newcommand{\conctm}[1]{\conc{#1}_{TM}}
@@ -449,7 +506,7 @@ $$\conc{CPA_{PS}(\mathbb{D}, e_0, \pi_0)} \supseteq Reach_{\tcarrow}(\conc{\{e_0
 
 Простые методы статического анализа пытаются вычислить аппроксимацию сверху возможных действий одного потока на другой, т.н. эффект потока.
 Однако, они не способны прослеживать сложные зависимости между переменными.
-Например, зависимости между глобальными переменными, которые, в свою очередь, могут быть модифицированы из других потоков.
+Например, зависимости между глобальными переменными, которые, в свою очередь, могут быть модифицированы в других потоках.
 В общем случае, это требует вычисления некоторой неподвижной точки, что является нежелательным при статическом анализе, так как значительно возрастают требования к ресурсам.
 В итоге, в таких сложных случаях считается, что глобальные переменные могут принимать любые значения.
 А это, в свою очередь, снижает точность анализа. 
@@ -2608,9 +2665,10 @@ $E^T_V = 2^{X \to \mathcal{Z}} \cup G$.
 Метод поиска состояния гонки заключается в построении множества достижимых абстрактных переходов с помощью алгоритма CPA~\ref{cpata_algorithm_ps}, а затем в поиске пары абстрактных переходов, начальные состояния которых являются совместными, а сами переходы производят доступ к разделяемой области памяти, при этом хотя бы один из доступов является записью.
 
 Построение множества достижимых состояний производится с помощью комбинации описаных ранее CPA.
-Возможны различные конфигурации, в зависимости от поставленной задачи, например, такая: анализ точек программы $\mathcal{L}$, анализ потоков $\mathbb{T}$, анализ примитивов синхронизации $\mathbb{S}$ и анализ предикатов $\mathbb{P}$. Все эти анализы объединяются с помощью композитного анализа $\mathbb{C}$. Кроме различного множества используемых CPA возможно более точная настройка каждого CPA в отдельности, например, изменением варианта оператора $merge$.
+Возможны различные конфигурации CPA, в зависимости от поставленной задачи, например, такая: анализ точек программы $\mathcal{L}$, анализ потоков $\mathbb{T}$, анализ примитивов синхронизации $\mathbb{S}$ и анализ предикатов $\mathbb{P}$. Все эти анализы объединяются с помощью композитного анализа $\mathbb{C}$.
+Кроме различного множества используемых CPA возможно более точная настройка каждого CPA в отдельности, например, изменением варианта оператора $merge$.
 
-Тем не менее, было показано, что операторы каждого из этих видов анализа удовлетворяют условиям~\ref{cpa_transfer_eq},~\ref{cpa_merge_eq},~\ref{cpa_stop_eq},~\ref{cpa_prec_eq}, а значит, позволяют утверждать по теореме~\ref{thrm_soundness}, что множество вычесленных абстрактных состояний аппроксимирует свержу множество конкретных состояний программы.
+Тем не менее, было показано, что операторы каждого из этих видов анализа удовлетворяют условиям~\ref{cpa_transfer_eq},~\ref{cpa_merge_eq},~\ref{cpa_stop_eq},~\ref{cpa_prec_eq}, а значит, позволяют утверждать по теореме~\ref{thrm_soundness}, что множество вычисленных абстрактных состояний аппроксимирует свержу множество конкретных состояний программы.
 Таким образом, если в числе абстрактных состояний программы присутствует ошибочное, значит, программа не соответствует поставленной спецификации.
 
 Покажем, что для программы, содержащей состояний гонки в смысле определения~\ref{raceDef}, будет найдено состояние гонки на абстрактных состояниях.
