--- a/Dissertation/appendix.tex
+++ b/Dissertation/appendix.tex
@@ -202,24 +202,24 @@ $\tau \in \epp_I((e_0,t_0), \{(e_1,t_1), \dots, (e_n, t_n)\})$.
 По определению~\ref{epp_tm_na} это означает, что $s_i = (t_i, c(t_i),c_l(t_i), c_g,c_s)$. 
 По определению $\tatarrow_Q$ существует состояние $s_0' = (t_0, c'(t_0),c_l'(t_0), c'_g,c'_s)$.
 % Кроме того, переход e'_0 может быть спроецирован: $e'_0|_p = e'_p = (s, t, (gl', s', gl'', s''))$.
-Так как $\{e_i\}$ были совместны  (оператор $check_C(\{e_0,\dots,e_n\})$, это означает, что все переходы в окружении соответствует переходу: $\forall 1 \le i \le n: q_i = (gl, s, gl', s')$.
+Так как $\{e_i\}$ были совместны  (cpa-оператор $check_C(\{e_0,\dots,e_n\})$, это означает, что все переходы в окружении соответствует переходу: $\forall 1 \le i \le n: q_i = (gl, s, gl', s')$.
 Таким образом, следующие состояния имеют вид $e_i \tatarrow e'_i$, $e'_i = (s'_i, t_i, q'_i)$, где $s'_i = (t_i, c(t_i),c_l(t_i), c'_g,c'_s)$.
 То есть, глобальные части других частичных состояний меняются в соответствии с переходом в основном потоке.
 При этом по определению $\tatarrow_Q$, который выдает все возможные переходы, $\exists 0 \le k \le n: g' = q'_k$, то есть новый переход в потоке должен содержатся среди полученных после переходов в окружении. 
 Зафиксируем это значение $k$ и рассмотрим проекцию этого нового перехода в потоке: $e'_k|_p = e'_p = (s'_k, t_k, (gl', s', gl'', cs'')) $.
 Глобальное часть состояний $s'_i$ была получена с помощью одинакового перехода, поэтому она удовлетворяет условию совместности $compatible_Q$. 
-Поэтому можно применить оператор $apply$ $\forall 0 \le i \le n, i \neq k: \tilde{e_i} = apply(e'_i, e'_p) = (s'_i, t_i, (gl', s', gl'', cs''))$.
+Поэтому можно применить cpa-оператор $apply$ $\forall 0 \le i \le n, i \neq k: \tilde{e_i} = apply(e'_i, e'_p) = (s'_i, t_i, (gl', s', gl'', cs''))$.
 И тогда, состояния $e'_k, \tilde{e'_0}, \dots, \tilde{e'_{k-1}}, \tilde{e'_{k+1}}, \dots, \tilde{e'_n}$ удовлетворяют условию $check_C$. 
-А значит, могут быть объединены в глобальный переход оператором $\epp$, при этом $\tau'$ будет в этом множестве по его построению.
+А значит, могут быть объединены в глобальный переход cpa-оператором $\epp$, при этом $\tau'$ будет в этом множестве по его построению.
 
 В доказательстве опущен второй случай с операцией создания потока thread\_create. 
 Рассуждения полностью повторяют описанные выше с той лишь поправкой, что они проводятся для $n+1$ элемента.
 \end{proof}
 
-\section{Доказательство условия~\ref{cpa_strengthen_req} оператора $strengthen$}
+\section{Доказательство условия~\ref{cpa_strengthen_req} cpa-оператора $strengthen$}
 \label{sect_composite_strengthen_proof}
 
-Покажем, что требование~\ref{cpa_strengthen_req} выполнено для простого оператора $\downarrow$ (определение~\ref{simple_strengthen_def}).
+Покажем, что требование~\ref{cpa_strengthen_req} выполнено для простого cpa-оператора $\downarrow$ (определение~\ref{simple_strengthen_def}).
 
 \begin{proof}
 Дакажем условие от противного.
@@ -237,7 +237,7 @@ $\tau \in \epp_I((e_0,t_0), \{(e_1,t_1), \dots, (e_n, t_n)\})$.
 \end{align*}
 Где $\downarrow e_j = (\tilde{e}^1_j, \dots, \tilde{e}^m_j)$.
 
-Учитывая явный вид перехода $e=(s,q)$ и вид оператора $epp_I$(определение~\ref{epp_split}), а также то, что оператор усиления не меняет абстрактного состояния (определение~\ref{simple_strengthen_def}), получаем, что можно исключить из рассмотрения абстрактные состояния:
+Учитывая явный вид перехода $e=(s,q)$ и вид cpa-оператора $epp_I$(определение~\ref{epp_split}), а также то, что cpa-оператор усиления не меняет абстрактного состояния (определение~\ref{simple_strengthen_def}), получаем, что можно исключить из рассмотрения абстрактные состояния:
 \begin{align*}
 & \exists g \in G, e^i_0, \dots, e^i_n \in E_I, t_0, \dots, t_n \in T : \\
 & g \in \econc{q^i_0} \cap \econc{q^i_1} \cap \dots \cap \econc{q^i_n} \\
@@ -368,7 +368,7 @@ $ \forall 1 \le i \le n+1: e_i' = ({e^1_i}', \dots, {e^m_i}')$.
 \section{Доказательство условия~\ref{cpa_transfer_composite_req} для ThreadCPA}
 \label{sect_transfer_thread_proof}
 
-Нам нужно доказать, что определенные в разделе~\ref{sect_thread_analysis} операторы $transfer$ и $apply$ удовлетворяют условию~\ref{cpa_transfer_composite_req}.
+Нам нужно доказать, что определенные в разделе~\ref{sect_thread_analysis} cpa-операторы $transfer$ и $apply$ удовлетворяют условию~\ref{cpa_transfer_composite_req}.
 
 \begin{proof}
 Рассмотрим случайный конкретный переход:
@@ -442,7 +442,7 @@ l_{\nu}
 \section{Доказательство условия~\ref{cpa_transfer_composite_req} для LocationCPA}
 \label{sect_transfer_location_proof}
 
-Нам нужно доказать, что определенные в разделе~\ref{sect_location_analysis} операторы $transfer$ и $apply$ удовлетворяют условию~\ref{cpa_transfer_composite_req}.
+Нам нужно доказать, что определенные в разделе~\ref{sect_location_analysis} cpa-операторы $transfer$ и $apply$ удовлетворяют условию~\ref{cpa_transfer_composite_req}.
 
 \begin{proof}
 Рассмотрим случайный конкретный переход $\tau \tcarrow \tau'$ и такие абстрактные переходы $e_0, \dots, e_n$, что :
@@ -500,8 +500,8 @@ t_n
 \end{pmatrix}$$
 
 Теперь рассмотрим поток $k$ в котором совершается переход $\tau' = (c', g', t_k)$. 
-По определению оператора $transfer$ $e_k \tatarrow e_k'$, $e_k' = (s_k', g_k)$, где $g_k$ -- включает в себя все дуги, по которым возможны переходы из данной точки программы, то есть и $g'$. 
-По определению $compatible$ полученные состояния будут совместны, а значит, можно будет применить оператор $apply$, то есть
+По определению cpa-оператора $transfer$ $e_k \tatarrow e_k'$, $e_k' = (s_k', g_k)$, где $g_k$ -- включает в себя все дуги, по которым возможны переходы из данной точки программы, то есть и $g'$. 
+По определению $compatible$ полученные состояния будут совместны, а значит, можно будет применить cpa-оператор $apply$, то есть
 $\tau' \in \epp_I((e_k', t_k), \{(\tilde{e}_i, t_i) \mid \tilde{e}_i = apply(e_i', e'_k) \land i \neq k)\})$.
 
 Для случая $g = tc_{Child}(l_\nu)$ или $g = tc_{Parent}(l_\nu)$ доказательство принципиально ничем не отличается от предыдущего случая, так как никакой новой семантике в этих дугах нет. 
@@ -510,7 +510,7 @@ $\tau' \in \epp_I((e_k', t_k), \{(\tilde{e}_i, t_i) \mid \tilde{e}_i = apply(e_i
 \section{Доказательство условия~\ref{cpa_transfer_composite_req} для PredicateCPA}
 \label{sect_transfer_predicate_proof}
 
-Нам нужно доказать, что определенные в разделе~\ref{sect_predicate_analysis} операторы $transfer$ и $apply$ удовлетворяют условию~\ref{cpa_transfer_composite_req}.
+Нам нужно доказать, что определенные в разделе~\ref{sect_predicate_analysis} cpa-операторы $transfer$ и $apply$ удовлетворяют условию~\ref{cpa_transfer_composite_req}.
 
 \begin{proof}
 
@@ -600,12 +600,12 @@ t_n
 Рассмотрим теперь случай $op = assign(x, exp)$. Зафиксируем значение $k$ такое, что $t_k = t'$. Будем рассматривать переход в потоке из состояния $s_k$.
 
 $e_k \tatarrow e_k'$, $e_k'|_p = (\theta_{X^{local},env}(s_k'),\theta_{X^{local},env}(SP_{q'}(s_k'))$. 
-Начальные состояния $s_i$ были совместными, так как к ним был применим оператор $\epp$. 
+Начальные состояния $s_i$ были совместными, так как к ним был применим cpa-оператор $\epp$. 
 Отсюда следует, что существовала общая модель $\hat{v_g} \models s_i$.
-По определению оператора $assign$, который меняет только значение переменной $x$ на новое, $c_g' = \hat{v_g}'$, где $\hat{v_g}'$ совпадает с $\hat{v_g}$ для всех переменных, кроме $x$.
-По определению оператора перехода $s_k' = SP_{op}(s_k)$, а $s_i' = s_i'[x \rightarrow \hat x] \land SP_{op}(true) = SP_{op}(s_i)$.
+По определению cpa-оператора $assign$, который меняет только значение переменной $x$ на новое, $c_g' = \hat{v_g}'$, где $\hat{v_g}'$ совпадает с $\hat{v_g}$ для всех переменных, кроме $x$.
+По определению cpa-оператора перехода $s_k' = SP_{op}(s_k)$, а $s_i' = s_i'[x \rightarrow \hat x] \land SP_{op}(true) = SP_{op}(s_i)$.
 Таким образом, частичные состояния всех потоков меняются согласованно, и по определению $SP_{op}(\varphi)$ новое $\hat{v_g}'$ должно являться моделью для новых абстрактных состояний.
-Теперь необходимо проверить, что для новых переходов будет выполнен оператор $apply$, то есть, переходы будут совместны.
+Теперь необходимо проверить, что для новых переходов будет выполнен cpa-оператор $apply$, то есть, переходы будут совместны.
 Мы показали, что состояния останутся совместными, и осталось показать, что совместными останутся дуги, то есть, согласно~\ref{epp_split}, что $\forall g \in G: g \in \econc{g} \cap \econc{\theta_{X^{local},env}(SP_{g}(true))}$. 
 Очевидно, что $g \in \econc{\theta_{X^{local},env}(SP_{g}(true))}$, и условие выполнено.
 Таким образом мы показали, что условие~\ref{cpa_transfer_inner_req} выполнено для анализа предикатов.
@@ -616,7 +616,7 @@ $e_k \tatarrow e_k'$, $e_k'|_p = (\theta_{X^{local},env}(s_k'),\theta_{X^{local}
 \section{Доказательство условия~\ref{cpa_transfer_composite_req} для LockCPA}
 \label{sect_transfer_lock_proof}
 
-Нам нужно доказать, что определенные в разделе~\ref{sect_lock_analysis} операторы $transfer$ и $apply$ удовлетворяют условию~\ref{cpa_transfer_composite_req}.
+Нам нужно доказать, что определенные в разделе~\ref{sect_lock_analysis} cpa-операторы $transfer$ и $apply$ удовлетворяют условию~\ref{cpa_transfer_composite_req}.
 
 
 \begin{proof}
@@ -759,7 +759,7 @@ t_n
 \section{Доказательство условия~\ref{cpa_transfer_composite_req} для ValueCPA}
 \label{sect_transfer_value_proof}
 
-Нам нужно доказать, что определенные в разделе~\ref{sect_value_analysis} операторы $transfer$ и $apply$ удовлетворяют условию~\ref{cpa_transfer_composite_req}.
+Нам нужно доказать, что определенные в разделе~\ref{sect_value_analysis} cpa-операторы $transfer$ и $apply$ удовлетворяют условию~\ref{cpa_transfer_composite_req}.
 
 
 \begin{proof}
@@ -867,14 +867,14 @@ t_n
 \right\}
 \right)$
 
-Начальные состояния $s_i$ были совместными, так как к ним был применим оператор $\epp$. 
+Начальные состояния $s_i$ были совместными, так как к ним был применим cpa-оператор $\epp$. 
 Отсюда следует, что существовала общая модель $\hat{v_g} \models s_i$.
 Заметим, что если переход есть на конкретных состояниях, это означает, что $c_g(x) = e_{/c}$, если $x \in X^{global}$ или $c_l(t_k)(x) = e_{/c}$, если $x \in X^{local}$.
 Рассмотрим присваивание, меняющее значение глобальной переменной, как наиболее сложный.
 По определению отношения переходов $s_k'(x) = e_{/s}$, а значения остальных переменных не изменяется.
 По определению перехода в окружении $s_i'(x) = q(x) = e$, а значения остальных переменных не изменяются.
 Таким образом, частичные состояния всех потоков меняются согласованно, и новое отображение $\hat{v_g}'$ должно являться моделью для новых абстрактных состояний, так как и состояния, и модель изменили только одно значение переменной $x$.
-Теперь необходимо проверить, что для новых переходов будет выполнен оператор $apply$, то есть, переходы будут совместны.
+Теперь необходимо проверить, что для новых переходов будет выполнен cpa-оператор $apply$, то есть, переходы будут совместны.
 Мы показали, что состояния останутся совместными, и осталось показать, что совместными останутся дуги, то есть, согласно~\ref{epp_split}, что $\forall g \in G: g \in \econc{g} \cap \econc{x \to e}$. 
 Очевидно, что $(\cdot, assign(x, e), \cdot) \in \econc{x \to e}$, и условие выполнено.
 Таким образом мы показали, что условие~\ref{cpa_transfer_inner_req} выполнено для анализа предикатов.
@@ -885,7 +885,7 @@ t_n
 \section{Доказательство условия~\ref{cpa_transfer_composite_req} для ThreadCPA c эффектами окружения}
 \label{sect_transfer_thread_env_proof}
 
-Нам нужно доказать, что определенные в разделе~\ref{sect_thread_analysis_env} операторы $transfer$ и $apply$ удовлетворяют условию~\ref{cpa_transfer_composite_req}.
+Нам нужно доказать, что определенные в разделе~\ref{sect_thread_analysis_env} cpa-операторы $transfer$ и $apply$ удовлетворяют условию~\ref{cpa_transfer_composite_req}.
 
 \begin{proof}
 Рассмотрим случайный конкретный переход $\tau = (c, g, t_0)$, $g=(\cdot, op, \cdot)$:
@@ -969,7 +969,7 @@ t_m
 При обычном переходе меняются состояния нулевого потока: $C'_0 = C_0 \cup \{l_{\nu}\}$, и появляется новый переход, соответствующий созданному потоку: $e_{m+1} = ((l_{\nu},C_0 \cup \{l_{\nu}\}) , \top^T_T)$.
 
 По определению $\epp_T$ все остальные переходы в окружении должны были содержать в себе абстрактную дугу, которая соответсвует переходу в потоке, то есть $q_i = (create, l_{\nu})$.
-Таким образом, $\forall 1 \le i \le m, C_i = C'_0$, то есть состояния остаются совместными, а значит, оператор $apply$ будет применим.
+Таким образом, $\forall 1 \le i \le m, C_i = C'_0$, то есть состояния остаются совместными, а значит, cpa-оператор $apply$ будет применим.
 Поэтому, 
 $$\tau' \in  \epp_{T}
 \left(
@@ -1000,7 +1000,7 @@ l_{\nu}
 \section{Доказательство условия~\ref{cpa_transfer_composite_req} для расширенного ThreadCPA, инвариантного к эффектам окружения}
 \label{sect_transfer_thread_ext_proof}
 
-Нам нужно доказать, что определенные в разделе~\ref{sect_thread_analysis_ext} операторы $transfer$ и $apply$ удовлетворяют условию~\ref{cpa_transfer_composite_req}.
+Нам нужно доказать, что определенные в разделе~\ref{sect_thread_analysis_ext} cpa-операторы $transfer$ и $apply$ удовлетворяют условию~\ref{cpa_transfer_composite_req}.
 
 \begin{proof}
 Рассмотрим случайный конкретный переход $\tau = (c, g, t_0)$, $g=(\cdot, op, \cdot)$:
@@ -1084,14 +1084,14 @@ t_m
 При обычном переходе меняются состояния нулевого потока: $s_0' = s_0 \cup \{(l_{\nu}, Parent)\}$, и появляется новый переход, соответствующий созданному потоку: $e_{m+1} = (s \cup \{(l_{\nu}, Child)\} , \top^T_T)$.
 
 По определению $\epp_T$ все остальные переходы в окружении должны были содержать в себе абстрактную дугу, которая соответсвует переходу в потоке, то есть $q_i = (create, l_{\nu})$.
-Основной вопрос заключается в том, будут ли новые состояния совместными (в смысле оператора $check_{C}$) друг с другом.
+Основной вопрос заключается в том, будут ли новые состояния совместными (в смысле cpa-оператора $check_{C}$) друг с другом.
 Заметим, что все исходные были совместными, то есть, для каждой пары существовал общий элемент.
 Так как $\forall 1 \le i \le m s_i' = s_i$, то $\forall 0 \le j \le m: check((s_j, t_j), \{(s_0, t_0), \dots, (s_m, t_m)\}) = true$.
 Теперь нужно проверить, что $\forall 0 \le j \le m: compatible(e_j', e_{m+1}')=true$.
 Для $j=0$ совместность обеспечивается идентификатором потока $l_{\nu}$, которая встречается в двух переходах с противоположными флагами.
 Для $j\neq 0$ совместность обеспечивается идентификатором того же потока, который обеспечивал совместность переходов $e_0$ и $e_j$.
 
-Таким образом, $\forall 0 \le i \le m, check((s_j, t_j), \{(s_0, t_0), \dots, (s_m, t_m)\}) = true$, а значит, оператор $\epp$ и оператор $apply$ применимы.
+Таким образом, $\forall 0 \le i \le m, check((s_j, t_j), \{(s_0, t_0), \dots, (s_m, t_m)\}) = true$, а значит, cpa-оператор $\epp$ и cpa-оператор $apply$ применимы.
 Поэтому, 
 $$\tau' \in  \epp_{T}
 \left(
