Fixes and updates from 24.02

--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -885,6 +885,22 @@ isbn={978-3-540-31980-1}
  keywords = {concurrent program, data race, multithreaded, static analysis}
 }
 
+@inproceedings{PDR,
+author = {Hoder, Kry\v{s}tof and Bj\o{}rner, Nikolaj},
+title = {Generalized Property Directed Reachability},
+year = {2012},
+isbn = {9783642316111},
+publisher = {Springer-Verlag},
+address = {Berlin, Heidelberg},
+url = {https://doi.org/10.1007/978-3-642-31612-8_13},
+doi = {10.1007/978-3-642-31612-8_13},
+booktitle = {Proceedings of the 15th International Conference on Theory and Applications of Satisfiability Testing},
+pages = {157–171},
+numpages = {15},
+location = {Trento, Italy},
+series = {SAT’12}
+}
+
 @inproceedings{Smith:2011:LGS,
  author = {Smith, Adam R. and Kulkarni, Prasad A.},
  title = {Localizing Globals and Statics to Make C Programs Thread-safe},
@@ -2146,6 +2162,17 @@ url="http://dx.doi.org/10.1007/978-3-540-45069-6_27"
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {formal software verification, multi-threaded systems, sat modulo theories, symbolic and explicit model checking}
+} 
+
+@inproceedings{BMC,
+ author = {Clarke, Edmund and Biere, Armin and Raimi, Richard and Zhu, Yunshan},
+ title = {Bounded Model Checking Using Satisfiability Solving},
+ booktitle = {Formal Methods in System Design},
+ year = {2001},
+ pages = {7--34},
+ issn = {1572-8102},
+ url = {https://doi.org/10.1023/A:1011276507260},
+ doi = {10.1023/A:1011276507260}
 } 
 
 @misc{Safeware,
