--- a/common/packages.tex
+++ b/common/packages.tex
@@ -84,7 +84,7 @@
 %%% Общее форматирование
 \usepackage{soulutf8}                               % Поддержка переносоустойчивых подчёркиваний и зачёркиваний
 \usepackage{icomma}                                 % Запятая в десятичных дробях
-\usepackage[hyphenation, lastparline]{impnattypo}   % Оптимизация расстановки переносов и длины последней строки абзаца
+%\usepackage[hyphenation, lastparline]{impnattypo}   % Оптимизация расстановки переносов и длины последней строки абзаца
 
 %%% Гиперссылки %%%
 \usepackage{hyperref}[2012/11/06]
